--- a/src/css/light-theme.css
+++ b/src/css/light-theme.css
@@ -5,10 +5,6 @@
   font-family: sans-serif;
 }
 
-* {
-  z-index: 1;
-}
-
 body {
   background-color: hsl(60, 100%, 98%);
   display: flex;
@@ -169,11 +165,12 @@ label:active:after {
   flex-direction: column;
   padding: 1em;
   overflow: hidden;
-  z-index: 3;
+  z-index: 1;
 }
 
 .modal-overlay {
   transition: opacity 0.2s ease-out;
+  pointer-events: none;
   background: rgba(0, 0, 0, 0.4);
   position: fixed;
   opacity: 0;
@@ -181,7 +178,7 @@ label:active:after {
   right: 0;
   left: 0;
   top: 0;
-  z-index: 0;
+  z-index: 1;
 }
 
 .modal.hidden {
@@ -198,7 +195,7 @@ label:active:after {
   right: 0;
   top: 0;
   width: 3em;
-  z-index: 3;
+  z-index: 1;
 }
 
 svg {
@@ -415,6 +412,7 @@ svg {
   border-radius: 0.25em;
   opacity: 1;
   transition: opacity 500ms ease-in-out; /* Fade */
+  user-select: none;
 }
 
 .alert.hide {
